# airports-scoring

./: .env.example  .gitignore  .gitmodules  12.Estadistica_Diciembre_2008.xls  CLAUDE.md  Cargo.toml  DEFINITIVOS_2021.xls  DEFINITIVOS_2022+(1).xlsx  DEFINITIVOS_2023.xlsx  Definitivo_2017.xls  Definitivos-2015.xls  Dockerfile  HANDOFF.md  TOTAL_2006.xls  TOTAL_2007_def.xls  airport_schema.sql  airports.json  anualDefinitivos_2010.xls  design.pen  dev-setup.md  docker-compose.dev.yml  docker-compose.yml  estadisticas+anual+2013+definitivo.xls  google-scraper.Dockerfile  start.sh
.claude/: settings.local.json
data/: aci_asq_awards.json  carbon_accreditation.json  european_airport_operators.json  skytrax_awards.json
data/aena/: 0.Anual_Definitivo_2018.xls  DEFINITIVOS+2024.xlsx  Definitivo+2014.xls  Definitivo-2016.xls  PROVISIONALES+2025.xlsx  TOTAL_2004.xls  anualDefinitivo_2011.xls
data/aena/ert_dly/: apt_dly_2023.csv.bz2  apt_dly_2024.csv.bz2  apt_dly_2025.csv.bz2  apt_dly_2026.csv.bz2
data/caa/2015/: table_03_1.csv  table_10_1.csv  table_10_2.csv  table_10_3.csv
data/caa/2016/: table_03_1.csv  table_10_1.csv  table_10_2.csv  table_10_3.csv
google-reviews-scraper-pro/: .gitignore  test_chrome.txt
google-reviews-scraper-pro/modules/: scraper.py
migrations/: 20260323000002_seed_supported_airports.sql  20260323_001_supported_airports.sql  20260324000001_drop_reviewer_names.sql  20260324000002_metar_daily_unique_constraint.sql  20260406000001_eurocontrol_raw.sql  20260411000001_widen_avg_rating.sql  20260412000001_airport_awards.sql  20260412000002_operator_slugs.sql
python/: carbon_accreditation.py  commentary.toml  google_reviews_sync.py  import_historical.py  priority_pass_scraper.py  requirements.txt  sentiment_pipeline.py  skytrax_scraper.py
scripts/: airport_schema.sql  backup-db.sh  seed-all-airports.sh  seed-awards.sh  seed-operators.sh  seed-reference-data.sh  setup-google-scraper.sh  start-google-scraper.sh  verify-db-restore.sh
src/: config.rs  main.rs  pipeline.rs  scoring.rs  scraper_pool.rs
src/db/: mod.rs
src/fetchers/: aena.rs  caa.rs  carbon_accreditation.rs  dst_denmark.rs  eurocontrol.rs  eurostat.rs  finavia.rs  google_reviews.rs  metar.rs  mod.rs  opdi.rs  openflights.rs  opensky.rs  ourairports.rs  priority_pass.rs  reviews.rs  routes.rs  sentiment.rs  skytrax.rs  ssb_norway.rs  wikipedia.rs
src/fetchers/aena/: mod.rs  (+2 more)
src/models/: entities.rs  mod.rs  supported.rs
src/scoring/: data.rs  dimensions.rs  mod.rs  persist.rs  tests.rs
src/server/: auth.rs  jobs.rs  logs.rs  mod.rs
web/: .dockerignore  .gitignore  Dockerfile  components.json  drizzle.config.ts  oxlintrc.json  package-lock.json  package.json  pnpm-lock.yaml  seed-global-airports.ts  seed.ts  tsconfig.json  vite.config.ts
web/.interface-design/: system.md
web/app/: routeTree.gen.ts  styles.css
web/public/: robots.txt
web/scripts/: generate-sitemap.ts  seed-global-airports.ts  seed.ts
(+163 files in other folders)
