[package]
name = "airport-fetch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "airport-fetch"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "migrate", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
calamine = "0.26"
regex = "1"
bzip2 = "0.5"
